<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/message"
    android:padding="12dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_reaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_action_chooser"
        android:text="@string/add_reaction"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/delete_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_action_chooser"
        android:text="@string/delete_message"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/edit_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_reaction" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_action_chooser"
        android:text="@string/edit_message"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/change_message_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_message"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_message_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_btn_action_chooser"
        android:text="@string/change_topic_of_message"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/copy_content_of_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/copy_content_of_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_action_chooser"
        android:text="@string/copy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_message_topic" />
</androidx.constraintlayout.widget.ConstraintLayout>
